# lab5

./: .env  .env-postgresql  config.py  docker-compose.yml  main.py  models.py  pyproject.toml
app/: Dockerfile  __init__.py  auth.py  docker-compose.yml  models.py  views.py
app/docker/: .env-postgresql
app/templates/: base.html  employees.html  index.html  login_error.html  signup_error.html
migrations/versions/: 2110cc75d5f3_init_migration.py  c5e196792ef1_edit_column_password_of_table_users.py  cac75b7c7493_add_table_users.py  d098f57ea2da_edit_column_password_of_table_users.py
